logs/ftrack-python-legacy-api.log
Listing '.'...
Listing './bin'...
Compiling './bin/wsdump.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/FTrackCore'...
Listing './lib/python3.5/site-packages/FTrackCore/api'...
Listing './lib/python3.5/site-packages/FTrackCore/api/accessor'...
Compiling './lib/python3.5/site-packages/FTrackCore/api/accessor/disk.py'...
***   File "./lib/python3.5/site-packages/FTrackCore/api/accessor/disk.py", line 145
    except OSError, error:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/FTrackCore/api/client.py'...
***   File "./lib/python3.5/site-packages/FTrackCore/api/client.py", line 121
    print "### DEBUG ####################################"
                                                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/FTrackCore/api/event'...
Listing './lib/python3.5/site-packages/FTrackCore/api/location'...
Listing './lib/python3.5/site-packages/FTrackCore/api/resource_identifier_transformer'...
Listing './lib/python3.5/site-packages/FTrackCore/api/structure'...
Listing './lib/python3.5/site-packages/FTrackCore/api/xmlrpc27'...
Compiling './lib/python3.5/site-packages/FTrackCore/api/xmlrpc27/httplib.py'...
***   File "./lib/python3.5/site-packages/FTrackCore/api/xmlrpc27/httplib.py", line 369
    print "reply:", repr(line)
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/FTrackCore/api/xmlrpc27/socket.py'...
***   File "./lib/python3.5/site-packages/FTrackCore/api/xmlrpc27/socket.py", line 352
    except error, e:
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/FTrackCore/api/xmlrpc27/urllib.py'...
***   File "./lib/python3.5/site-packages/FTrackCore/api/xmlrpc27/urllib.py", line 211
    except socket.error, msg:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/FTrackCore/api/xmlrpc27/urllib2.py'...
***   File "./lib/python3.5/site-packages/FTrackCore/api/xmlrpc27/urllib2.py", line 229
    raise AttributeError, attr
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/FTrackCore/api/xmlrpc27/urlparse.py'...
***   File "./lib/python3.5/site-packages/FTrackCore/api/xmlrpc27/urlparse.py", line 416
    raise ValueError, "bad query field: %r" % (name_value,)
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/FTrackCore/api/xmlrpc27/xmlrpclib.py'...
***   File "./lib/python3.5/site-packages/FTrackCore/api/xmlrpc27/xmlrpclib.py", line 193
    MAXINT =  2L**31-1
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/FTrackCore/api/xmlserver.py'...
***   File "./lib/python3.5/site-packages/FTrackCore/api/xmlserver.py", line 168
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/clique'...
Listing './lib/python3.5/site-packages/clique-1.5.0.egg-info'...
Listing './lib/python3.5/site-packages/ftrack_python_legacy_api-3.6.2.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyparsing-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/websocket'...
Listing './lib/python3.5/site-packages/websocket/tests'...
Listing './lib/python3.5/site-packages/websocket/tests/data'...
Listing './lib/python3.5/site-packages/websocket_client-0.46.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
